[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lrphotocopy"
version = "0.1.0a0"
description = "Organize and copy your photos into folders by shooting date, using Adobe Lightroom's year/date folder structure."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "exifread",
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/lrphotocopy"
"Bug Tracker" = "https://github.com/jifengwu2k/lrphotocopy/issues"